# graph-rag-pipeline

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
scripts/: init_db.sql  load_geojson.py
src/app/: config.py  main.py
src/app/models/: schemas.py
src/app/routes/: extract.py  graph.py  ingest.py  timeseries.py
src/app/services/: entsoe_client.py  eurostat_client.py  extractor.py  geo.py  graph_ingest.py  meteo_client.py  ontology.py  temporal.py  vectorstore.py
src/app/utils/: lang.py  logging.py
src/kg/cypher/: schema.cql  upsert_entities.cql  upsert_relations.cql
src/ontology/: ontology_prompt2.json  ontology_schema_v11.json
src/pipelines/: event_extraction.py  graph_rag.py
tests/: test_extractor.py  test_ontology.py
