[build-system]
requires=['setuptools>=68.0']
build-backend='setuptools.build_meta'

[tool.ruff]
line-length=100
select=['E','F','I','UP','B','SIM','PL']
ignore=['E501']

[tool.mypy]
python_version='3.11'
check_untyped_defs=true
warn_unused_ignores=true
no_implicit_optional=true
warn_redundant_casts=true
warn_return_any=true
strict_optional=true
